--- a/mandelbrot.fsproj
+++ b/mandelbrot.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Argu" Version="6.2.3" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
   </ItemGroup>
 
